test/2/parse/sym-double-under.err
test/2/parse/sym-double-under.ploy:1:3: lexical error: symbols cannot contain repeated '_' characters.
| a__
    ^
